--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,52 @@
-h1 {
-  color: salmon;
+body {
+  background-color: #edf0ee;
+  text-align: center;
+  width: 1000px;
+  margin: auto;
+  margin-top: 5em;
+  
 }
+
+h2 {
+  color: #4d4949;
+  font-family: 'Raleway', sans-serif;
+  margin-top: 2em;
+  
+}
+
+p {
+  color: #4d4949;
+  font-family: 'Raleway', sans-serif;
+  font-size: 12px;
+}
+
+img {
+  height: 250px;
+  width: 250px;
+  padding: 10px;
+}
+ 
+
+.locations {
+  display: flex;
+  flex-direction: row;
+}
+
+.cityNames {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+button {
+  border: 1px solid gray;
+  padding: 0px 80px;
+  background-color: white;
+  font-weight: 700;
+  }
+
+  button p {
+
+    color: rgb(126, 122, 122);
+  }
